[package]
name = "impl-cat-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ed25519 = { version = "1.4.1", features = ["pkcs8", "pem", "alloc"] }
ed25519-dalek = "1.0.1"
env_logger = "0.9.0"
log = "0.4.16"
nom = "7.1.1"
nom-derive = "0.10.0"
num_enum = "0.5.7"
paw = "1.0.0"
pem-rfc7468 = "0.3.1"
rand = { version = "0.7.3", features = ["getrandom"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
structopt = { version = "0.3.26", features = ["paw"] }
tokio = { version = "1.17.0", features = ["full"] }
